--- a/app/tpls/modal/createFuncPoints.html
+++ b/app/tpls/modal/createFuncPoints.html
@@ -41,7 +41,7 @@
             <div class="" ng-show="createFuncPoints==2">
                 <ul class="titleUl">
                     <li>
-                        <h1>关联组件</h1>
+                        <h1 class="hauto">关联组件</h1>
                         <select class="selectNormal">
                             <option>组件11111</option>
                             <option>组件22222</option>
@@ -82,7 +82,7 @@
             <div class ng-show="createFuncPoints==3">
                 <ul class="titleUl">
                     <li>
-                        <h1>批量添加</h1>
+                        <h1 class="hauto">批量添加</h1>
                         <input type="text" name="" class="inputText" placeholder="以';'隔开">
                         <button class="btndefault btn_blue">添加</button>
                     </li>
