--- a/app/tpls/home/main/demand/demandContent.html
+++ b/app/tpls/home/main/demand/demandContent.html
@@ -9,7 +9,7 @@
 					<a href="" class="cursor_p">需求内容</a>
 				</li>
 				<li ui-sref="index.demand.useCaseScenario">
-					<a href="" class="cursor_p">用例场景</a>
+					<a href="" class="cursor_p">用例设计</a>
 				</li>
 				<li>
 					<a href="" class="cursor_p" >需求链接</a>
