--- a/app/tpls/home/main/task/task.html
+++ b/app/tpls/home/main/task/task.html
@@ -2,7 +2,10 @@
 </style>
 <div class="projectBodyBox" ng-controller="taskCtrl">
     <div class="projectBodyTitle">
-        任务名称
+        任务列表
+        <div class="floatright btn_add" ng-click="open('createTask','lg')">
+            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 新建任务
+        </div>
     </div>
     <div class="useCaseListfunc clearfix">
         <div class="dropdownDefault floatleft" dropdown>
@@ -26,16 +29,17 @@
                 <li><i class="iconfont icon-addpeople_fill"></i><span>新增子节点</span></li>
                 <li><i class="iconfont icon-addpeople_fill"></i><span>新增同级节点</span></li>
             </ul>
-        </div>
-        <div class="floatright btn_add" ng-click="open('createFuncPoints','lg')">
-            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 提需求
-        </div>
+        </div>  
+        <div class="floatright searchBox">
+            <input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
+            <i class="iconfont icon-search"></i>
+        </div>     
     </div>
     <div class="projectBodyContent" style="top: 100px;" ng-controller="usecaseCtrl">
         <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
-               <span class="chatIconButton">
+                <span class="chatIconButton">
                     <i class="iconfont icon-guanlian"></i>复制
                 </span>                
                 <span class="chatIconButton">
@@ -46,15 +50,6 @@
                 </span>
                 <span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
-                </span>
-                <span class="chatIconButton floatright">
-                    <i class="iconfont icon-tongji"></i>用例统计
-                </span>
-                <span class="chatIconButton floatright">
-                    <i class="iconfont icon-import"></i>导入
-                </span>
-                <span class="chatIconButton floatright">
-                    <i class="iconfont icon-daochu2"></i>导出
                 </span>
                 <div class="clear"></div>
             </div>
