--- a/app/tpls/home/main/back-stageManagement/roleGroupManagement.html
+++ b/app/tpls/home/main/back-stageManagement/roleGroupManagement.html
@@ -127,8 +127,8 @@
 				<div class="clear"></div>
 			</div>
 			<div class="projectBodyFooter">
-				<input type="button" name="" value="保存" class="btndefault btndefault_blue" ng-click="ok()">
-				<input type="button" name="" value="重置" class="btndefault btndefault_gray" ng-click="ok()">
+				<input type="button" name="" value="保存" class="btndefault btndefault_blue" >
+				<input type="button" name="" value="重置" class="btndefault btndefault_gray" >
 			</div>
 		</div>
 	</div>
