--- a/app/tpls/home/main/back-stageManagement/dataDictionary.html
+++ b/app/tpls/home/main/back-stageManagement/dataDictionary.html
@@ -8,7 +8,7 @@
         <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
         	<div class="useCaseListfunction">
 				<span class="chatIconButton floatleft" ng-click="open('addAttributeValue')">
-                    <i class="iconfont icon-tianjia"></i>添加
+                    <i class="iconfont icon-tianjia-copy"></i>添加
                </span>
 				<span class="chatIconButton floatleft" ng-click="">
                     <i class="iconfont icon-editor"></i>修改
