--- a/app/tpls/home/main/back-stageManagement/defectProcess.html
+++ b/app/tpls/home/main/back-stageManagement/defectProcess.html
@@ -80,7 +80,7 @@
             		</select>
             	</span>
 				<span class="chatIconButton floatleft">
-                    <i class="iconfont icon-tianjia"></i>添加
+                    <i class="iconfont icon-tianjia-copy"></i>添加
              	</span>
 				<span class="chatIconButton floatright" ng-show="edit==0" ng-click="edit=1">
                     <i class="iconfont icon-bianji"></i>编辑缺陷流程
