--- a/app/tpls/home/main/back-stageManagement/userManagement.html
+++ b/app/tpls/home/main/back-stageManagement/userManagement.html
@@ -35,7 +35,7 @@
             		<i class="iconfont icon-search"></i>
             	</span>
              	<span class="chatIconButton floatleft" ng-click="open('addUserBack-stage')">
-                    <i class="iconfont icon-tianjia"></i>添加用户
+                    <i class="iconfont icon-tianjia-copy"></i>添加用户
                 </span>
                 <span class="chatIconButton floatleft" ng-click="open('importUser')">
                     <i class="iconfont icon-import"></i>导入用户
