--- a/app/tpls/home/main/demand/useCaseScenario.html
+++ b/app/tpls/home/main/demand/useCaseScenario.html
@@ -11,8 +11,8 @@
                 <li class="current">
                     <a href="" class="cursor_p">用例设计</a>
                 </li>
-                <li>
-                    <a href="" class="cursor_p">需求链接</a>
+                <li ui-sref="index.demand.usecaseHistory">
+                    <a href="" class="cursor_p">需求历史</a>
                 </li>
                 <div class="clear"></div>
             </ul>
@@ -31,7 +31,7 @@
                         <li class="current">
                             <a href="" class="cursor_p">功能点</a>
                         </li>
-                        <li ui-sref="index.demand.useCaseScenario.usecase">
+                        <li ui-sref="index.demand.usecaseScenario.usecase">
                             <a href="" class="cursor_p">测试用例</a>
                         </li>
                         <div class="clear"></div>
