--- a/app/tpls/home/projectNavBug.html
+++ b/app/tpls/home/projectNavBug.html
@@ -21,7 +21,10 @@
     </div>
     <div class="leftNavList projectNavList " style="top: 120px;">
         <div class="title">
-            过滤器
+            自定义过滤器
+            <span class="chatIconButton floatright treefunicon" data-tip="过滤器管理">
+                <i class="iconfont icon-guanli"></i>
+            </span>
             <span class="chatIconButton floatright treefunicon" data-tip="存储为新的过滤器">
                 <i class="iconfont icon-add"></i>
             </span>
