--- a/app/tpls/modal/createFuncPoints.html
+++ b/app/tpls/modal/createFuncPoints.html
@@ -90,11 +90,11 @@
                         <div class="title">
                             <div class="floatleft leftTitle">
                                 数据列表：
-                                <span>
+                                <span class="chatIconButton">
                                     <i class="iconfont icon-addition_fill"></i>
                                     新增数据
                                 </span>
-                                <span>
+                                <span class="chatIconButton">
                                     <i class="iconfont icon-delete_fill"></i>
                                     删除数据
                                 </span>
