--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,11 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/angular-ui-tree.min.css">
     <link rel="stylesheet" type="text/css" href="css/ui-grid.min.css">
+    <!-- 重置大小 -->
     <link rel="stylesheet" type="text/css" href="css/angular-resizable.css">
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_371097_6hy516qjo4xi529.css">
+    <!-- 富文本编辑器 -->
+    <link rel="stylesheet" type="text/css" href="lib/umeditor/themes/default/css/umeditor.css">
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_371097_nycd5ir7iz035wmi.css">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/common.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css">
