--- a/app/tpls/home/main/projectlist/projectCreateProject.html
+++ b/app/tpls/home/main/projectlist/projectCreateProject.html
@@ -68,7 +68,9 @@
 						<div class="addProjectModel " style="border: none;>
 						<i class="iconfont icon-biaoqian"></i>
 						<input placeholder="添加项目模块,点击回车添加" ng-keyup="addModel2($event)" ng-model="modelItem2">
-						<span ng-repeat="(v,model) in pModel2" class="filterspan"><i class="iconfont icon-huiyuan i_color1"></i>{{model}}
+						<span ng-repeat="(v,model) in pModel2" class="filterspan">
+							<i class="iconfont icon-huiyuan i_color1"></i>
+							<span class="filterspanText">{{model}}</span>
                             <i class="iconfont icon-delete_fill" ng-click="sModelDel2(v)"></i>
                     	</span>
 					</div>
