--- a/app/tpls/home/main/back-stageManagement/defectProcess.html
+++ b/app/tpls/home/main/back-stageManagement/defectProcess.html
@@ -101,8 +101,9 @@
 							<td>
 								<span class="f_blue" ng-show="edit==0">新建</span>
 								<select name="" ng-show="edit==1">
-									<option value="">新建</option>
-									<option value="">确认</option>
+									<option  value="">新建</option>
+									<option  value="">确认</option>
+									<option  value="">分配</option>
 								</select>
 							</td>
 							<td>
