--- a/app/tpls/home/topbar.html
+++ b/app/tpls/home/topbar.html
@@ -10,6 +10,7 @@
         <a class="topbarLink" href="" ui-sref="index.testset">测试集</a>       
 		<a class="topbarLink" href="" ui-sref="index.bug">缺陷</a>		        
 		<a class="topbarLink" href="" ui-sref="index.statement">统计</a>
+		<a class="topbarLink" href="" ui-sref="index.dataPool">数据池</a>
 	</div>
 	<div class="floatright rightMenu">		
         <div class="dropdownDefault floatleft" dropdown>
