--- a/app/tpls/modal/runningDevice.html
+++ b/app/tpls/modal/runningDevice.html
@@ -1,4 +1,12 @@
 <style type="text/css">
+.modal-dialog {
+    width: 1100px;
+}
+
+.modal-body {
+    height: 600px;
+    max-height: 600px;
+}
 </style>
 <div class="modal-header">
     <h3>执行用例</h3>
@@ -9,21 +17,21 @@
             <ul class="modalLeftTab">
                 <li ng-class="{'current':createFuncPoints==1}" ng-click="createFuncPoints=1">
                     <i class="iconfont icon-barrage_fill"></i>
-                    <span>发起执行</span>
+                    <span>基本信息</span>
                 </li>
                 <li ng-class="{'current':createFuncPoints==2}" ng-click="createFuncPoints=2">
                     <i class="iconfont icon-guanlianbangding1"></i>
-                    <span>运行情况</span>
+                    <span>执行设置</span>
                 </li>
                 <li ng-class="{'current':createFuncPoints==3}" ng-click="createFuncPoints=3">
                     <i class="iconfont icon-activity_fill"></i>
-                    <span>运行日志</span>
+                    <span>执行情况</span>
                 </li>
             </ul>
         </div>
-        <div class="floatleft flex modalRightContent">
+        <div class="floatleft flex modalRightContent modalRightContent1">
             <!-- 基本信息 -->
-            <div ng-show="createFuncPoints==1">
+            <div>
                 <ul class="titleUl">
                     <li>
                         <h1>执行名称：</h1>
@@ -32,7 +40,7 @@
                             <span class="defaultText">2018-08-29-</span>
                         </div>
                         <div class="clear"></div>
-                    </li>                   
+                    </li>
                     <li>
                         <h1>执行类型：</h1>
                         <select class="selectNormal floatleft" ng-init="selected=pModel[0]" ng-model="selected" ng-options="x for x in pModel">
@@ -42,47 +50,70 @@
                                 <span class="dropdowntoggletext">                   
                                     <i class="iconfont icon-add"></i>自定义
                                 </span>
-
                             </div>
                             <ul class="dropdown-menu transition" dropdown-menu role="menu">
                                 <input ng-click="$event.stopPropagation()" ng-keyup="addModel($event)" type="text" name="" class="inputText" placeholder="输入执行类型按回车添加" ng-model="modelItem">
                             </ul>
                         </div>
                         <div class="clear"></div>
-                    </li>                   
-                    <div class="modalDataPanel">
-                        <div class="title">
-                            <div class="floatleft leftTitle">
-                                执行器列表：
-                                <span class="chatIconButton">
+                    </li>
+                </ul>
+            </div>
+            <div ng-show="createFuncPoints==1">
+                <div class="modalDataPanel floatleft" style="width: 40%">
+                    <div class="tablePanel">
+                        <table class="table-fullborder">
+                            <tr class="text_nowrap">
+                                <th>
+                                    <input type="checkbox" name="">
+                                </th>
+                                <th>测试集名称</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <input type="checkbox" name="">
+                                </td>
+                                <td>公司名称公司名称公司名称公司</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="modalDataPanel floatright" style="width: 58%">
+                    <div class="title">
+                        <div class="floatleft leftTitle">
+                            执行器列表：
+                            <span class="chatIconButton">
                                     <i class="iconfont icon-gengxin-copy"></i>
                                     刷新执行器
                                 </span>
-                            </div>
-                            <div class="clear"></div>
                         </div>
-                        <div class="tablePanel" style="max-height: 180px;">
-                            <table class="table-fullborder">
-                                <tr class="text_nowrap">
-                                    <th><input type="checkbox" name=""></th>
-                                    <th>IP地址</th>
-                                    <th>用户</th>
-                                    <th>执行器类型</th>
-                                    <th>执行器状态</th>
-                                    <th>备注</th>
-                                </tr>
-                                <tr>
-                                    <td><input type="checkbox" name=""></td>
-                                    <td>255.255.255.255</td>
-                                    <td>公司名称公司名称公司名称公司</td>
-                                    <td>类型</td>
-                                    <td>已占用</td>
-                                    <td>执行器备注</td>
-                                </tr>
-                            </table>
-                        </div>
+                        <div class="clear"></div>
                     </div>
-                </ul>
+                    <div class="tablePanel" style="max-height: 180px;">
+                        <table class="table-fullborder">
+                            <tr class="text_nowrap">
+                                <th>
+                                    <input type="checkbox" name="">
+                                </th>
+                                <th>IP地址</th>
+                                <th>用户</th>
+                                <th>执行器类型</th>
+                                <th>执行器状态</th>
+                                <th>备注</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <input type="checkbox" name="">
+                                </td>
+                                <td>255.255.255.255</td>
+                                <td>公司名称公司名称公司名称公司</td>
+                                <td>类型</td>
+                                <td>已占用</td>
+                                <td>执行器备注</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
             <!-- 运行情况 -->
             <div class="" ng-show="createFuncPoints==2">
@@ -91,7 +122,7 @@
                         <h1>开始时间：</h1>
                         <h2>2017-8-29 17：00：00</h2>
                         <div class="clear"></div>
-                    </li>                   
+                    </li>
                     <li>
                         <h1>运行时间：</h1>
                         <h2>35：00</h2>
@@ -101,15 +132,14 @@
                         <h1>剩余时间：</h1>
                         <h2>35：00</h2>
                         <div class="clear"></div>
-                    </li> 
-                                       
+                    </li>
                 </ul>
                 <ul class="titleUl titleUl1">
                     <li>
                         <h1>总用例数：</h1>
                         <h2>20</h2>
                         <div class="clear"></div>
-                    </li>                   
+                    </li>
                     <li>
                         <h1>成功用例数：</h1>
                         <h2>10</h2>
@@ -119,14 +149,14 @@
                         <h1>失败用例数：</h1>
                         <h2>0</h2>
                         <div class="clear"></div>
-                    </li>   
+                    </li>
                 </ul>
                 <ul class="titleUl titleUl1">
                     <li>
                         <h1>运行组件：</h1>
                         <h2>20</h2>
                         <div class="clear"></div>
-                    </li>                   
+                    </li>
                     <li>
                         <h1>成功用例数：</h1>
                         <h2>10</h2>
@@ -136,18 +166,16 @@
                         <h1>失败用例数：</h1>
                         <h2>0</h2>
                         <div class="clear"></div>
-                    </li>   
+                    </li>
                 </ul>
             </div>
             <!-- 运行日志 -->
-            <div class="runningLog" ng-show="createFuncPoints==3">
+            <div class="runningLog" ng-show="createFuncPoints==4">
                 <p class="runningLogText">
-                    【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
-                    【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
+                    【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹 【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
                 </p>
                 <p class="runningLogText">
-                    【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
-                    【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
+                    【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹 【aiyina】添加描述：evalbert 修改任务隶属项目原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
                 </p>
             </div>
         </div>
