--- a/app/tpls/home/main/dataPool/dataCollection.html
+++ b/app/tpls/home/main/dataPool/dataCollection.html
@@ -79,8 +79,8 @@
 						</div>
 						<div class="right">
 							<select name="" class="selectNormal">
-								<option value="">手工输入</option>
-								<option value="">数据库抓取</option>
+								<option value="1">手工输入</option>
+								<option value="2">数据库抓取</option>
 							</select>
 						</div>
 					</li>
